2014-12-26  Freddie Chopin  <freddie_chopin@op.pl>

	* libc/include/sys/features.h: update newlib version and copyright year

2014-12-18  Jeff Johnston  <jjohnstn@redhat.com>

        * NEWS: Update with 2.2.0 info.
        * README: Ditto.
        * acinclude.m4: Change version number to 2.2.0.
        * libc/libc.texinfo: Ditto.
        * libm/libm.texinfo: Ditto.
        * configure: Regenerated.
        * Makefile.in: Regenerated.
        * doc/configure: Ditto.
        * libc/*/configure: Ditto.
        * libm/*/configure: Ditto.
        * libc/sys/linux/shared.ld: Add VERS_2.2

2014-12-18  Yaakov Selkowitz  <yselkowi@redhat.com>

	Implement BSD/GNU unlocked stdio extensions.
	* libc/include/stdio.h (clearerr_unlocked, feof_unlocked,
	ferror_unlocked, fflush_unlocked, fgetc_unlocked, fgets_unlocked,
	fileno_unlocked, fputc_unlocked, fputs_unlocked, fread_unlocked,
	fwrite_unlocked): Declare.
	* libc/include/wchar.h (fgetwc_unlocked, fgetws_unlocked,
	fputwc_unlocked, fputws_unlocked, getwc_unlocked, getwchar_unlocked,
	putwc_unlocked, putwchar_unlocked): Declare.
	* libc/stdio/Makefile.am (ELIX_4_SOURCES): Add clearerr_u.c,
	feof_u.c, ferror_u.c, fflush_u.c, fgetc_u.c, fgets_u.c, fgetwc_u.c,
	fgetws_u.c, fileno_u.c, fputc_u.c, fputs_u.c, fputwc_u.c, fputws_u.c,
	fread_u.c, fwrite_u.c, getwc_u.c, getwchar_u.c, putwc_u.c, putwchar_u.c.
	Add necessary dependencies.
	* libc/stdio/Makefile.in: Regenerate.
	* libc/stdio/clearerr.c: Document unlocked variant.
	* libc/stdio/clearerr_u.c: New file.
	* libc/stdio/feof.c: Document unlocked variant.
	* libc/stdio/feof_u.c: New file.
	* libc/stdio/ferror.c: Document unlocked variant.
	* libc/stdio/ferror_u.c: New file.
	* libc/stdio/fflush.c: Add __IMPL_UNLOCKED__ overrides.
	Document unlocked variants.
	* libc/stdio/fflush_u.c: New file.
	* libc/stdio/fgetc.c: Document unlocked variants.
	* libc/stdio/fgetc_u.c: New file.
	* libc/stdio/fgets.c: Add __IMPL_UNLOCKED__ overrides.
	Document unlocked variants.