@@ -20,6 +20,8 @@ lib_a_SOURCES += memmove.S
 lib_a_SOURCES += memset-stub.c
 lib_a_SOURCES += memset.S
 lib_a_SOURCES += setjmp.S
+lib_a_SOURCES += stpcpy-stub.c
+lib_a_SOURCES += stpcpy.S
 lib_a_SOURCES += strchr-stub.c
 lib_a_SOURCES += strchr.S
 lib_a_SOURCES += strchrnul-stub.c
