@@ -1,3 +1,12 @@
+2015-01-06  Richard Earnshaw  <rearnsha@arm.com>
+
+	* libc/machine/aarch64/strcpy.S (strcpy): Further performance
+	improvements.  Adjust to allow building as stpcpy.
+	* libc/machine/aarch64/stpcpy.S: New file.
+	* libc/machine/aarch64/stpcpy-stub.c: New file.
+	* libc/machine/aarch64/Makefile.am (lib_a_SOURCES): Build stpcpy.
+	* libc/machine/aarch64/Makefile.in: Regenerated.
+
 2014-12-26  Freddie Chopin  <freddie_chopin@op.pl>
 
 	* libc/include/sys/features.h: update newlib version and copyright year
